--- a/src/gestorcitas/views/PatientForm.fxml
+++ b/src/gestorcitas/views/PatientForm.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="300.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="300.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
    <children>
       <GridPane layoutX="17.0" layoutY="43.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="232.0" prefWidth="391.0">
         <columnConstraints>
@@ -94,7 +94,7 @@
             </VBox>
          </children>
       </GridPane>
-      <VBox alignment="TOP_RIGHT" layoutX="391.0" layoutY="14.0" prefHeight="200.0" prefWidth="144.0">
+      <VBox alignment="TOP_RIGHT" layoutX="368.0" layoutY="14.0" prefWidth="167.0">
          <children>
             <ImageView fx:id="photoPreview" fitHeight="150.0" fitWidth="144.0" pickOnBounds="true">
                <image>
@@ -104,11 +104,12 @@
                   <Rectangle2D minX="150.0" minY="150.0" width="150.0" />
                </viewport>
             </ImageView>
-            <Button fx:id="photoChangeBtn" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="%generic.change">
+            <Button fx:id="photoChangeBtn" alignment="CENTER" mnemonicParsing="false" onAction="#onChangePhoto" prefHeight="25.0" prefWidth="76.0" text="%generic.change">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
             </Button>
+            <Label fx:id="photoErrorLabel" textAlignment="RIGHT" textFill="RED" visible="false" wrapText="true" />
          </children>
       </VBox>
       <Text fill="#726868" layoutX="17.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%form.person.title">
@@ -117,7 +118,7 @@
          </font>
       </Text>
       <Line endX="136.0" layoutX="126.0" layoutY="38.0" startX="-109.0" />
-      <HBox alignment="CENTER_RIGHT" layoutX="391.0" layoutY="252.0" prefHeight="47.0" prefWidth="163.0" spacing="6.0">
+      <HBox alignment="CENTER_RIGHT" layoutX="270.0" layoutY="252.0" prefHeight="47.0" prefWidth="284.0" spacing="6.0">
          <children>
             <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onSave" text="%generic.save">
                <HBox.margin>
