--- a/src/gestorcitas/views/PatientForm.fxml
+++ b/src/gestorcitas/views/PatientForm.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -17,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="300.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="346.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
    <children>
       <GridPane layoutX="17.0" layoutY="43.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="232.0" prefWidth="391.0">
         <columnConstraints>
@@ -118,7 +119,7 @@
          </font>
       </Text>
       <Line endX="136.0" layoutX="126.0" layoutY="38.0" startX="-109.0" />
-      <HBox alignment="CENTER_RIGHT" layoutX="270.0" layoutY="252.0" prefHeight="47.0" prefWidth="284.0" spacing="6.0">
+      <HBox alignment="CENTER_RIGHT" layoutX="266.0" layoutY="298.0" prefHeight="47.0" prefWidth="284.0" spacing="6.0">
          <children>
             <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onSave" text="%generic.save">
                <HBox.margin>
@@ -135,5 +136,6 @@
             <Insets right="10.0" />
          </padding>
       </HBox>
+      <CheckBox fx:id="photoConsentBox" layoutX="29.0" layoutY="281.0" mnemonicParsing="false" text="%form.person.photoConsent" />
    </children>
 </AnchorPane>
