--- a/src/gestorcitas/views/DoctorForm.fxml
+++ b/src/gestorcitas/views/DoctorForm.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.DoctorFormController">
    <children>
       <Text fill="#726868" layoutX="21.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos personales">
          <font>
@@ -62,49 +62,49 @@
             </Text>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="120.0">
+                  <TextField fx:id="nameField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="120.0">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="Label" />
+                  <Label fx:id="nameErrorLabel" alignment="CENTER_RIGHT" text="Label" />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField alignment="BASELINE_LEFT">
+                  <TextField fx:id="surnameField" alignment="BASELINE_LEFT">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="Label" />
+                  <Label fx:id="surnameErrorField" alignment="CENTER_RIGHT" text="Label" />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                  <TextField fx:id="idField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="El DNI no contiene letra." />
+                  <Label fx:id="idErrorField" alignment="CENTER_RIGHT" text="El DNI no contiene letra." />
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <TextField alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
+                  <TextField fx:id="phoneField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="100.0">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label alignment="CENTER_RIGHT" text="Label" />
+                  <Label fx:id="phoneErrorField" alignment="CENTER_RIGHT" text="Label" />
                </children>
             </VBox>
          </children>
       </GridPane>
       <VBox alignment="TOP_RIGHT" layoutX="285.0" layoutY="46.0" prefHeight="200.0" prefWidth="144.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="144.0" pickOnBounds="true">
+            <ImageView fx:id="photoPreview" fitHeight="150.0" fitWidth="144.0" pickOnBounds="true">
                <image>
                   <Image url="@../resources/img/default.png" />
                </image>
@@ -112,7 +112,7 @@
                   <Rectangle2D minX="150.0" minY="150.0" width="150.0" />
                </viewport>
             </ImageView>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Cambiar">
+            <Button fx:id="phoneChangeBtn" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Cambiar">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
