--- a/src/gestorcitas/views/AppointmentsTab.fxml
+++ b/src/gestorcitas/views/AppointmentsTab.fxml
@@ -30,12 +30,12 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.appointments.search.prompt">
+            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="35.0" prefWidth="190.0" promptText="%tab.appointments.search.prompt">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </TextField>
-            <Button mnemonicParsing="false" onAction="#onSearch" text="%generic.search">
+            <Button mnemonicParsing="false" onAction="#onSearch" prefHeight="35.0" text="%generic.search">
                <HBox.margin>
                   <Insets right="25.0" />
                </HBox.margin>
@@ -48,12 +48,12 @@
          <right>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="30.0" prefWidth="75.0" text="%generic.add">
+                  <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="35.0" text="%generic.add">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="removeBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="30.0" prefWidth="75.0" text="%generic.remove">
+                  <Button fx:id="removeBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="35.0" text="%generic.remove">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
@@ -62,6 +62,9 @@
                <BorderPane.margin>
                   <Insets top="15.0" />
                </BorderPane.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </VBox>
          </right>
          <top>
