--- a/src/gestorcitas/views/PatientForm.fxml
+++ b/src/gestorcitas/views/PatientForm.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="346.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="346.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
    <children>
       <GridPane layoutX="17.0" layoutY="43.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="232.0" prefWidth="391.0">
         <columnConstraints>
@@ -105,7 +105,7 @@
                   <Rectangle2D minX="150.0" minY="150.0" width="150.0" />
                </viewport>
             </ImageView>
-            <Button fx:id="photoChangeBtn" alignment="CENTER" mnemonicParsing="false" onAction="#onChangePhoto" prefHeight="25.0" prefWidth="76.0" text="%generic.change">
+            <Button fx:id="photoChangeBtn" alignment="CENTER" mnemonicParsing="false" onAction="#onChangePhoto" prefHeight="25.0" text="%generic.change">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
