--- a/src/gestorcitas/views/PatientsTab.fxml
+++ b/src/gestorcitas/views/PatientsTab.fxml
@@ -27,12 +27,12 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="25.0" prefWidth="190.0" promptText="%tab.patients.search.prompt">
+            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="35.0" prefWidth="190.0" promptText="%tab.patients.search.prompt">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </TextField>
-            <Button mnemonicParsing="false" onAction="#onSearch" text="%generic.search">
+            <Button mnemonicParsing="false" onAction="#onSearch" prefHeight="35.0" text="%generic.search">
                <HBox.margin>
                   <Insets right="24.0" />
                </HBox.margin>
@@ -43,17 +43,17 @@
    <right>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
-            <Button fx:id="showBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShow" prefHeight="30.0" prefWidth="75.0" text="%generic.show">
+            <Button fx:id="showBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShow" prefHeight="35.0" text="%generic.show">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="30.0" prefWidth="75.0" text="%generic.add">
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="35.0" text="%generic.add">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button fx:id="removeBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="30.0" prefWidth="75.0" text="%generic.remove">
+            <Button fx:id="removeBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="35.0" text="%generic.remove">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -62,15 +62,18 @@
          <BorderPane.margin>
             <Insets top="15.0" />
          </BorderPane.margin>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </VBox>
    </right>
    <center>
-      <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
          <columns>
             <TableColumn fx:id="photoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
-            <TableColumn fx:id="idColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
-            <TableColumn fx:id="nameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.name" />
-            <TableColumn fx:id="phoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="100.0" text="%table.person.phone" />
+            <TableColumn fx:id="idColumn" editable="false" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
+            <TableColumn fx:id="nameColumn" editable="false" minWidth="-1.0" prefWidth="200.0" text="%table.person.name" />
+            <TableColumn fx:id="phoneColumn" editable="false" minWidth="-1.0" prefWidth="110.0" text="%table.person.phone" />
          </columns>
          <BorderPane.margin>
             <Insets bottom="15.0" left="15.0" />
